tests/negative_pomidory/data_file.pomidor
App Name:
Version:
Release date:

Sprint:


@feature csv_data3
!!@data pageObjects/csv_data_source.csv
First, click on login_field #practice_menu_button page title
and type [[text-1]]in #name_field. Then, type [[some
free text]] in #name_field


@feature csv_data4
@data pageObjects/csv_data_source.csv
First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,
 and types <<City of
 Birth>> in #name_field
and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field


Sprint#2:

@feature csv_data
@data pageObjects/csv_data_source.csv
2-First, Click on login_field #practice_menu_button page title
2-and TyPE <<FirstName>> in #name_field. Then, type 2- [[2-second
!! This is a comment
free
text]] in #name_field, !! not valid comment
""driver.wait(2)
""driver.quit()
2- and types <<City of
Birth>> in #name_field
2-and again